# Arctic-Sea-Ice-Extent

./: .gitignore  CO2_CH4_conc(1983).xlsx  ECO Project first draft.pptx  README.md  SeaIce_CO2_CH4_Merged.xlsx  Sea_Ice_Index_Monthly_Data_with_Statistics_G02135_v3.0.xlsx  Transformed Data - Melt Season.xlsx  Transformed Data.xlsx  artic_ice.ipynb  main.py  pyproject.toml
data/processed/: SeaIce_CO2_CH4_Merged.xlsx  Transformed Data - Melt Season.xlsx  Transformed Data.xlsx  model_validation_metrics.csv  sea_ice_extent_12_month_forecast.xlsx
src/: arctic_sea_ice_analysis.py
